# covid-site-graficos

./: .gitignore  Dockerfile  Procfile  README.md  dbbackup copy.sqlite3  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
brazil/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
brazil/data/: brazil_statedata.csv
brazil/fixtures/: statesdata2.json
brazil/migrations/: 0001_initial.py  0002_auto_20200422_1905.py  0003_auto_20200422_2302.py  0004_auto_20200425_1952.py  0005_auto_20200524_0138.py
brazil/services/: calculate_moving_average.py  data_brazil_charts.py  data_states_maps.py  detail_state_data.py  get_cities_data_for_detail_state_page.py  get_geojson_states_data.py  save_data_states.py  update_data_using_ms_base.py
brazil/tests/: tests_brasil_io.py  tests_ms_source_import.py
city/: admin.py  apps.py  models.py  urls.py  views.py
city/data/: city_citydata.csv
city/migrations/: 0001_initial.py  0002_auto_20200514_1138.py  0003_auto_20200524_0142.py  0004_auto_20200616_1043.py
city/services/: process_city_data.py
core/: __init__.py  celery.py  settings.py  settings_digitalocean.py  settings_heroku.py  urls.py  views.py
static/css/: style.css
static/js/: brazil.js  city.js  state.js  world.js
static/json/: AM.json  CE.json  ES.json  GO.json  MS.json  PA.json  PB.json  PE.json  PR.json  RJ.json  RN.json  RO.json  RR.json  RS.json  SE.json
templates/: base.html  index.html
templates/brazil/: brazil.html  cities.html  state.html  (+1 more)
world/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
(+85 files in other folders)
