[tool.poetry]
name = "covid_django"
version = "0.1.0"
description = ""
authors = ["ThiagoDiasV <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
requests = "^2.23.0"
python-dotenv = "^0.12.0"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
python-dateutil = "^2.8.1"
celery = "^4.4.2"
redis = "^3.4.1"
supervisor = "^4.1.0"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylama = "^7.7.1"
ipdb = "^0.13.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[flake8]
max-line-length = 80
